--- a/app/src/main/res/layout/detail.xml
+++ b/app/src/main/res/layout/detail.xml
@@ -13,13 +13,15 @@
 
 		<ImageView
 			android:layout_height="wrap_content"
-			android:layout_width="350dp"
-			android:id="@+id/detail_poster"/>
+			android:layout_width="wrap_content"
+			android:id="@+id/detail_poster"
+			android:layout_weight="35"/>
 
 		<LinearLayout
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
-			android:orientation="vertical">
+			android:orientation="vertical"
+			android:layout_weight="65">
 
 			<TextView
 				android:layout_height="wrap_content"
@@ -56,4 +58,3 @@
 
 
 </LinearLayout>
-
