--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,13 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		android:layout_height="match_parent"
+		android:layout_width="match_parent"
+		>
+		
+		<FrameLayout    
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:id="@+id/det_container">
+				
+		
+<GridView 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnWidth="250dp"
+    android:columnWidth="150dp"
     android:numColumns="auto_fit"
-    android:verticalSpacing="10dp"
-    android:horizontalSpacing="10dp"
+    android:verticalSpacing="5dp"
+    android:horizontalSpacing="5dp"
     android:stretchMode="columnWidth"
     android:gravity="center"
 	android:id="@+id/gridview">
 </GridView>
 
+
+		
+
+		</FrameLayout>
+		
+
+</LinearLayout>
